first commit: cel rendering, map rendering, rotating body implemented

--- a/ShaderTF/ShaderTF.vcxproj
+++ b/ShaderTF/ShaderTF.vcxproj
@@ -87,6 +87,8 @@
     <ClInclude Include="Vertex.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="ironman.frag" />
+    <None Include="ironman.vert" />
     <None Include="toon.frag" />
     <None Include="toon.vert" />
     <None Include="toon2.frag" />
