--- a/ShaderTF/ShaderTF.vcxproj.filters
+++ b/ShaderTF/ShaderTF.vcxproj.filters
@@ -75,5 +75,11 @@
     <None Include="toon.vert">
       <Filter>GLSL</Filter>
     </None>
+    <None Include="ironman.vert">
+      <Filter>GLSL</Filter>
+    </None>
+    <None Include="ironman.frag">
+      <Filter>GLSL</Filter>
+    </None>
   </ItemGroup>
 </Project>
